Removed authMiddleware and AuthUser errors for deployment fix
